# target-determinator-testdata

./: .bazelrc  .gitmodules  README.md  WORKSPACE.bazel  workspace.bzl
java/example/: BUILD.bazel
rules/: simple_java_library.bzl
