load("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

http_archive(
    name = "rules",
    sha256 = "50ee2b97a74106f1e293c96478b422bf896a2f378d72a5d33320ec261cc4d323",
    strip_prefix = "target-determinator-testdata-rules-v0-initial-commit",
    url = "https://github.com/bazel-contrib/target-determinator-testdata/archive/refs/tags/rules/v0/initial-commit.tar.gz",
)
